# Ascend-msprobe

./: .coverage  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CMakeLists.txt  CONTRIBUTING.md  MANIFEST.in  README.md  build.sh  setup.py
ccsrc/: CMakeLists.txt
ccsrc/aclgraph_dump/: CMakeLists.txt  aclgraph_dump.cpp
ccsrc/adump/: CMakeLists.txt
ccsrc/adump/base/: DebuggerConfig.cpp  DebuggerConfig.h  DebuggerConfigFieldMap.h  Environment.cpp  Environment.h  ErrorInfosManager.cpp  ErrorInfosManager.h
ccsrc/adump/core/: AclDumpDataProcessor.cpp  AclDumpDataProcessor.h  AclDumper.cpp  AclDumper.h  AclTensor.cpp  AclTensor.h  PrecisionDebugger.cpp  PrecisionDebugger.h
ccsrc/adump/core/mindspore/: MSAclDumper.cpp  MSAclDumper.h  MindSporeTrigger.cpp  MindSporeTrigger.h
ccsrc/adump/if/mindspore/: MindSporeDbgHook.cpp
ccsrc/adump/if/python/: ACLDump.cpp  ACLDump.h  CPythonAgent.cpp  CPythonAgent.h  MsProbeIfPython.cpp  PrecisionDebuggerIfPython.cpp  PrecisionDebuggerIfPython.h
ccsrc/adump/include/: ErrorCode.h  ExtArgs.h  Macro.h
ccsrc/adump/utils/: CPythonUtils.cpp  CPythonUtils.h  DataUtils.cpp  DataUtils.h  FileOperation.cpp  FileOperation.h  FileUtils.cpp  FileUtils.h  MathUtils.cpp  MathUtils.h
ccsrc/atb_probe/: CMakeLists.txt  atb_probe.cpp
ccsrc/atb_probe/ait_logger/: ait_logger.cpp
ccsrc/atb_probe/utils/: Statistics.h  bin_file.h  const.h  file.cpp  file.h  safety_guard.cpp  safety_guard.h  umask_wrapper.h  utils.h
cmake/: Findcpython.cmake  Findsecurec.cmake  config.ini  download_opensource.sh
docs/: 10.accuracy_compare_PyTorch.md  11.accuracy_compare_MindSpore.md  conf.py  index.md  requirements.txt  torchair_dump.md
docs/_static/: custom.css  mermaid_init.js  repo_links.js  right_toc.js  table_add_class_name.js
docs/_templates/: layout.html
docs/msprobe/: 01.installation.md  02.config_introduction.md  03.config_examples.md  04.kernel_dump_PyTorch.md  05.data_dump_PyTorch.md  06.data_dump_MindSpore.md  07.accuracy_checker_PyTorch.md  09.accuracy_checker_MindSpore.md  10.accuracy_compare_PyTorch.md  11.accuracy_compare_MindSpore.md  13.overflow_check_MindSpore.md  21.visualization_PyTorch.md  22.visualization_MindSpore.md  25.tool_function_introduction.md  28.debugger_save_instruction.md  28.kernel_dump_MindSpore.md  29.data_dump_MSAdapter.md  FAQ.md  mindspore_accuracy_checker_instruct.md  mindspore_accuracy_checker_perf_baseline.md  overflow_check.md  pytorch_accuracy_checker_instruct.md  torchair_compare.md  torchair_dump.md
docs/msprobe/data_dump_MindSpore/: dynamic_graph_quick_start_example.md
docs/msprobe/visualization/: layer_mapping_example.md  mindspeed_llamafactory_mapping.md
docs/zh/: checkpoint_compare_instruct.md  config_check_instruct.md  dir_structure.md  faq.md  limitations_and_precautions.md  mindstudio_vulnerability_handling_procedure.md  monitor_instruct.md  monitor_v2_instruct.md  msprobe_install_guide.md  overview.md  public_ip_address.md  release_notes.md  security_statement.md
docs/zh/accuracy_checker/: mindspore_accuracy_checker_instruct.md  pytorch_accuracy_checker_instruct.md
docs/zh/accuracy_compare/: atb_data_compare_instruct.md  checkpoint_compare_instruct.md  infer_compare_offline_model_instruct.md  infer_compare_result.md  mindspore_accuracy_compare_instruct.md  mindspore_visualization_instruct.md  offlline_data_compare_instruct.md  online_dispatch_instruct.md  pytorch_accuracy_compare_instruct.md  pytorch_visualization_instruct.md  tb_graph_ascend.md  torchair_compare_instruct.md  trend_visualization_instruct.md
docs/zh/baseline/: mindspore_data_dump_perf_baseline.md  monitor_perf_baseline.md  pytorch_data_dump_perf_baseline.md
docs/zh/design_documents/: MindStudio26.0.0精度调试特性分析与设计说明书.md
docs/zh/developer_guide/: development_guide.md
docs/zh/dump/: aclgraph_dump_instruct.md  atb_data_dump_instruct.md  config_json_examples.md  config_json_introduct.md  data_parse_instruct.md  debugger_save_instruct.md  infer_offline_dump_instruct.md  mindspore_data_dump_instruct.md  mindspore_dump_quick_start.md  mindspore_kernel_dump_instruct.md  msadapter_data_dump_instruct.md  pytorch_data_dump_instruct.md  pytorch_kernel_dump_instruct.md  sglang_eager_dump_instruct.md  torchair_dump_instruct.md  verl_fsdp_consistency_preprocess_dump.md  verl_megatron_consistency_preprocess_dump.md  vllm_dump_instruct.md
docs/zh/examples/: layer_mapping_example.md  mindspeed_llamafactory_mapping_example.md
docs/zh/legal/: license_notice.md
docs/zh/overflow_check/: mindspore_overflow_check_instruct.md  overflow_check_instruct.md
docs/zh/quick_start/: mindspore_quick_start.md  pytorch_quick_start.md
docs/zh/resources/: tb_graph_ascend-3.0.0-py3-none-any.whl  (+1 more)
plugins/tb_graph_ascend/: .gitignore  README.md  secure_build.py  setup.py
python/msaccucmp/: README.md
python/msaccucmp/ait_backend/llm/dump/: CMakeLists.txt  DumpThreadPool.h  Statistics.h  atb_probe.cpp  atb_probe.h  bin_file.cpp  build.sh
python/msaccucmp/ait_backend/llm/mindie_torch_dump/: CMakeLists.txt  build.sh  dump_utils.cpp  dump_utils.h
python/msaccucmp/test/fuzz_test/: CMakeLists.txt  FuzzDefs.h  FuzzMain.cpp
python/msaccucmp/test/fuzz_test/case/: test_llm.cpp
python/msaccucmp/test/ut/ait_testcase/: CMakeLists.txt  generate_coverage.sh  layer_test.json  run_ait_cases.sh  test_json.json
python/msaccucmp/test/ut/ait_testcase/cases/: env_var_guard.h  test_ait_logger.cpp  test_llm_dump_atb_probe.cpp  test_llm_dump_binfile.cpp  test_mtd_dump_utils.cpp  test_utils_file.cpp  test_utils_safety_guard.cpp  test_utils_utils.cpp
python/msaccucmp/test/ut/ait_testcase/common/: common_stub.h  stats_generator.cpp  stats_generator.h  tools.cpp  tools.h
python/msprobe/: README.md  __init__.py  config.json  msprobe.py
scripts/: build_msaccucmp.sh
scripts/atb/: config_example.json  load_atb_probe.sh  unload_atb_probe.sh
scripts/conf/: version.info
scripts/run_script/: common.sh  main_msaccucmp.sh  uninstall.sh  version.info
test/core_ut/: test_common_config.py  test_file_check.py  test_log.py
test/msprobe_test/: run_test.sh  run_ut.py
(+995 files in other folders)
